Updated - Gap issue fixed

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -621,7 +621,9 @@ section {
     }
     &__author {
         &--info {
-            gap: 15px;
+            img {
+                margin-right: 15px;
+            }
         }
         &--details {
             p {
